uniffi/tests/ui/version_mismatch.stderr
error[E0080]: attempt to compute `0_usize - 1_usize`, which would overflow
 --> tests/ui/version_mismatch.rs:2:1
  |
2 | uniffi::assert_compatible_version!("0.0.1"); // An error message would go here.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_::{constant#0}` failed here
  |
  = note: this error originates in the macro `uniffi::deps::static_assertions::const_assert` which comes from the expansion of the macro `uniffi::assert_compatible_version` (in Nightly builds, run with -Z macro-backtrace for more info)
